IdSetter añadido